Change domain to sergivos.dev

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://sergivb01.me"
+baseURL = "https://sergivos.dev"
 languageCode = "en-us"
 defaultContentLanguage = "en"
 title = "Sergi Vos"
