--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/hermit"]
-	path = themes/hermit
-	url = https://github.com/Track3/hermit.git
+[submodule "themes/hugo-coder"]
+	path = themes/hugo-coder
+	url = git@github.com:/luizdepra/hugo-coder.git
